fixed song alignment

--- a/client/scss/containerStyles.scss
+++ b/client/scss/containerStyles.scss
@@ -100,6 +100,7 @@ input {
     margin-top: 1.5em;
     display: flex;
     min-width: 73.85em;
+    max-width: 73.85em;
     flex-wrap: wrap;
     text-align: center;
     margin-bottom: 3em;
@@ -115,96 +116,96 @@ input {
 [class="1A"], [class="1B"] {
     background-color: rgb(5, 196, 148);
     border: 1px solid black;
-    min-width: 18em;
-    max-width: 18em;
+    min-width: 18.338em;
+    max-width: 18.338em;
     text-align: center;
 }
 
 [class="2A"], [class="2B"] {
     background-color: lime;
     border: 1px solid black;
-    min-width: 18em;
-    max-width: 18em;
+    min-width: 18.338em;
+    max-width: 18.338em;
     text-align: center;
 }
 
 [class="3A"], [class="3B"] {
     background-color: rgb(251, 255, 0);
     border: 1px solid black;
-    min-width: 18em;
-    max-width: 18em;
+    min-width: 18.338em;
+    max-width: 18.338em;
     text-align: center;
 }
 
 [class="4A"], [class="4B"] {
     background-color: orange;
     border: 1px solid black;
-    min-width: 18em;
-    max-width: 18em;
+    min-width: 18.338em;
+    max-width: 18.338em;
     text-align: center;
 }
 
 [class="5A"], [class="5B"] {
     background-color: salmon;
     border: 1px solid black;
-    min-width: 18em;
-    max-width: 18em;
+    min-width: 18.338em;
+    max-width: 18.338em;
     text-align: center;
 }
 
 [class="6A"], [class="6B"] {
     background-color: palevioletred;
     border: 1px solid black;
-    min-width: 18em;
-    max-width: 18em;
+    min-width: 18.338em;
+    max-width: 18.338em;
     text-align: center;
 }
 
 [class="7A"], [class="7B"] {
     background-color: plum;
     border: 1px solid black;
-    min-width: 18em;
-    max-width: 18em;
+    min-width: 18.338em;
+    max-width: 18.338em;
     text-align: center;
 }
 
 [class="8A"], [class="8B"] {
     background-color: violet;
     border: 1px solid black;
-    min-width: 18em;
-    max-width: 18em;
+    min-width: 18.338em;
+    max-width: 18.338em;
     text-align: center;
 }
 
 [class="9A"], [class="9B"] {
     background-color: rgb(159, 4, 159);
     border: 1px solid black;
-    min-width: 18em;
-    max-width: 18em;
+    min-width: 18.338em;
+    max-width: 18.338em;
     text-align: center;
 }
 
 [class="10A"], [class="10B"] {
     background-color: blueviolet;
     border: 1px solid black;
-    min-width: 18em;
-    max-width: 18em;
+    min-width: 18.338em;
+    max-width: 18.338em;
     text-align: center;
 }
 
 [class="11A"], [class="11B"] {
     background-color: rgb(220, 220, 244);
     border: 1px solid black;
-    min-width: 18em;
-    max-width: 18em;
+    min-width: 18.338em;
+    max-width: 18.338em;
     text-align: center;
 }
 
 [class="12A"], [class="12B"] {
     background-color: rgb(6, 234, 234);
     border: 1px solid black;
-    min-width: 18em;
-    max-width: 18em;
+    min-width: 18.338em;
+    max-width: 18.338em;
     text-align: center;
 }
 
